tests/fail/unary_intermediate.stderr
error[E0406]: Morphology symbols (^, *, ~, &) are only allowed at the terminal of an access chain
 --> tests/fail/unary_intermediate.tk:5:15
  |
 5 |     auto v = (^p).x // EXPECT: error[E0406]:
  |               ^
